src/styles/Venda.scss
.container-produto{
    width: 100%;
    height: 100vh;
    background-color: whitesmoke;
    display: flex;
    justify-content: center;

    .container-info{
        width: 960px;
        height: 100%;
        padding-top: 150px;
        display: flex;
        border-bottom-right-radius: 10%;
        background-color: white;
        gap: 40px;

        .imagem-produto{
            width: 300px;
            display: flex;

            .carrossel-imagem{
                .img-small{
                    >img{
                        width: 75px;
                    }
                }
            }

            .imagem-principal{
                >img{
                    width: 300px;
                }
            }
        }
        .info-produto{
            margin-left: 170px;
            display: flex;
            flex-direction: column;
            height: 300px;

            .wrapper-buy{
                display: flex;
                flex-direction: column;
                align-items: center;

                .wrapper-button{
                    .button{
                        margin: 20px;
                        border: none;
                        background: rgb(251,33,117);
                        background: linear-gradient(0deg, rgba(251,33,117,1) 0%, rgba(234,76,137,1) 100%);
                        color: #fff;
                        overflow: hidden;
                    }
                    .button:hover{
                        text-decoration: none;
                        color: #fff ;
                    }
                }
            }

            .wrapper-title{
                padding-bottom: 35px;

                >h1{
                    margin-bottom: 0px;
                }
    
                >p{
                    font-size: 12px;   
                }
            }
           
        }
    }
}

